@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.2beta2
+# SNMPTTCONVERT v1.2beta3
 #
 # Copyright 2002-2007 Alex Burger
 # alex_b@users.sourceforge.net
